Update padding internal

--- a/www/index.html
+++ b/www/index.html
@@ -64,7 +64,7 @@
                                 <option value="3">Bungalow</option>
                             </select>
                         </div>
-                        <div class="col-sm-2 wid2">
+                        <div class="col-sm-2 wid2" style="padding-top: 10px;">
                             <label>Phòng ngủ<span class="required-field"> (*)</span></label>
                             <select id="room" class="selectpicker form-control" name="location" required>
                                 <option value="1">Studio</option>
@@ -72,7 +72,7 @@
                                 <option value="3">Hai</option>
                             </select>
                         </div>
-                        <div class="col-sm-2 wid date">
+                        <div class="col-sm-2 wid date" style="padding-top: 10px;">
                             <label>Ngày và giờ thêm Thuộc tính<span class="required-field"> (*)</span></label>
                             <input id="createdAt" name="s" class="form-control" value="" placeholder="Ngày/Tháng/Năm"
                                 type="text">
@@ -93,7 +93,7 @@
                                 <option value="3">Đã trang bị một phần</option>
                             </select>
                         </div>
-                        <div class="col-sm-2 wid2">
+                        <div class="col-sm-2 wid2" style="padding-top: 10px;">
                             <label>Ghi chú</label>
                             <textarea id="noted" class="form-control" placeholder="Nhập thông tin ghi chú" name="s"
                                 rows="4" cols="50"></textarea>
