--- a/www/AddProperty.html
+++ b/www/AddProperty.html
@@ -147,7 +147,7 @@
                             <li class="dropdown"><a href="#" class="dropdown-toggle"
                                     data-toggle="dropdown">Manage</a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="AddProperty.html"><i class="fa fa-angle-right"
+                                    <li><a href="index.html"><i class="fa fa-angle-right"
                                                 aria-hidden="true"></i>AddPropertyPage</a></li>
                                     <li><a href="Search.html"><i class="fa fa-angle-right"
                                                 aria-hidden="true"></i>SearchPage</a></li>
@@ -188,7 +188,7 @@
                                 <option value="3">Hotel</option>
                             </select>
                         </div>
-                        <div class="col-sm-2 wid2"  style="padding-top: 10px;">
+                        <div class="col-sm-2 wid2" style="padding-top: 10px;">
                             <label>Bedroom<span class="required-field"> (*)</span></label>
                             <select id="room" class="selectpicker form-control" name="location" required>
                                 <option value="1">1</option>
