--- a/www/DetailsProperty.html
+++ b/www/DetailsProperty.html
@@ -26,102 +26,6 @@
 </head>
 
 <body>
-	<!-- top start here -->
-	<!-- top start here -->
-	<div id="top">
-		<div class="container">
-			<div id="top-links" class="nav">
-				<ul class="list-inline pull-left">
-					<li>
-						<a href="#">Welcome to rentalz</a>
-					</li>
-					<li>
-						<form method="post" enctype="multipart/form-data" id="form-language">
-							<div class="btn-group">
-								<button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
-									Language : <span class="name"><span class="hidden-xs">English</span> <i
-											class="fa fa-caret-down"></i></span>
-								</button>
-								<ul class="dropdown-menu">
-									<li><a href="javascript:;">English</a></li>
-								</ul>
-							</div>
-						</form>
-					</li>
-					<li>
-						<form method="post" enctype="multipart/form-data" id="form-currency">
-							<div class="btn-group">
-								<button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
-									Currency : <span class="name"><span class="hidden-xs"> (USD)</span> <i
-											class="fa fa-caret-down"></i></span>
-								</button>
-								<ul class="dropdown-menu">
-									<li><button class="currency-select btn btn-link btn-block" type="button"
-											name="EUR">&#8364; Euro</button></li>
-									<li><button class="currency-select btn btn-link btn-block" type="button"
-											name="GBP">&#163; Pound Sterling</button></li>
-									<li><button class="currency-select btn btn-link btn-block" type="button"
-											name="USD">$ US Dollar</button></li>
-								</ul>
-							</div>
-						</form>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<!-- top end here -->
-
-	<!-- header start here-->
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4 col-md-4 col-xs-12">
-					<div class="social-icon">
-						<ul class="list-inline">
-							<li>
-								<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
-										aria-hidden="true"></i></a>
-							</li>
-							<li>
-								<a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"
-										aria-hidden="true"></i></a>
-							</li>
-							<li>
-								<a href="https://plus.google.com/" target="_blank"><i class="social_googleplus"
-										aria-hidden="true"></i></a>
-							</li>
-							<li>
-								<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
-										aria-hidden="true"></i></a>
-							</li>
-							<li>
-								<a href="https://in.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"
-										aria-hidden="true"></i></a>
-							</li>
-							<li><a href="https://photos.google.com/" target="_blank"><i class="social_picassa"></i></a>
-							</li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-sm-4 col-md-4 col-xs-12">
-					<div id="logo">
-						<a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo"
-								title="logo" /></a>
-					</div>
-				</div>
-				<div class="col-sm-4 col-md-4 col-xs-12">
-					<div class="button-login pull-right">
-						<button type="button" class="btn btn-default btn-lg"
-							onclick="location.href='tour-booking-form.html'">Booking Now</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<!-- header end here -->
-
 	<!-- menu start here -->
 	<div id="menu">
 		<div class="container">
@@ -129,7 +33,12 @@
 				<div class="col-sm-12 col-md-12 col-xs-12">
 					<nav class="navbar">
 						<div class="navbar-header">
-							<span class="menutext visible-xs">Menu</span>
+							<span class="menutext visible-xs">Welcome to RentalZ</span>
+							<!-- <div class="col-sm-4 col-md-4 col-xs-12">
+                                <div id="logo">
+                                    <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo" title="logo" /></a>
+                                </div>
+                            </div> -->
 							<button data-target=".navbar-ex1-collapse" data-toggle="collapse"
 								class="btn btn-navbar navbar-toggle" type="button"><i class="fa fa-bars"
 									aria-hidden="true"></i></button>
@@ -139,7 +48,7 @@
 								<li class="dropdown"><a href="#" class="dropdown-toggle"
 										data-toggle="dropdown">Manage</a>
 									<ul class="dropdown-menu">
-										<li><a href="AddProperty.html"><i class="fa fa-angle-right"
+										<li><a href="index.html"><i class="fa fa-angle-right"
 													aria-hidden="true"></i>AddPropertyPage</a></li>
 										<li><a href="Search.html"><i class="fa fa-angle-right"
 													aria-hidden="true"></i>SearchPage</a></li>
@@ -160,9 +69,9 @@
 	<div class="bread-crumb">
 		<div class="container">
 			<h2>Details Property</h2>
-			<ul class="list-inline">
+			<!-- <ul class="list-inline">
 				<li><a href="tour-booking-form.html">Hotel</a></li>
-			</ul>
+			</ul> -->
 		</div>
 	</div>
 	<!-- breadcrumb end here -->
@@ -172,190 +81,17 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="booking-form">
-					<div class="col-md-6 col-lg-6 col-sm-8 col-xs-12">
-						<div class="astro">
-							<img src="images/header4/image1.jpg" class="img-responsive" alt="image1" title="image1" />
-							<div class="caption">
-								<h3>Property name : Astro Place Hotels & Sites..</h3>
-								<div class="rate">
-									<span>HOT DEALS</span>
-									<i class="fa fa-star" aria-hidden="true"></i>
-									<i class="fa fa-star" aria-hidden="true"></i>
-									<i class="fa fa-star" aria-hidden="true"></i>
-									<i class="fa fa-star" aria-hidden="true"></i>
-									<i class="fa fa-star-half-o" aria-hidden="true"></i>
-								</div>
-								<h5><i class="icon_pencil-edit"></i>Note</h5>
-							</div>
-							<div>
-								<input type="button" value="Update" />
-								<input type="button" value="Delete" />
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-6 col-sm-4 col-xs-12">
+					<div id="header-detail" class="col-md-6 col-lg-6 col-sm-8 col-xs-12"></div>
+					<div id="footer-detail" class="col-md-6 col-lg-6 col-sm-4 col-xs-12">
 						<div class="detail">
 							<h3>OTHER DETAIL</h3>
-							<ul class="list-unstyled">
-								<li>
-									<p>Property address<span>240/08 HCM</span></p>
-								</li>
-								<li>
-									<p>Property type <span>Hotel</span></p>
-								</li>
-								<li>
-									<p>Bedrooms<span>Greece, Santormi</span></p>
-								</li>
-								<li>
-									<p>CreateTime<span>2021/11/22</span></p>
-								</li>
-								<li>
-									<p>Monthly rent price<span>$ 1230</span></p>
-								</li>
-								<li>
-									<p>Notes<span>aaaaaaaaa</span></p>
-								</li>
-								<li>
-									<h6>Name of the reporter <span>abcsd</span></h6>
-								</li>
-							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-
 	</div>
 	<!-- main container end here -->
-
-	<!-- news start here -->
-	<div class="news">
-		<img src="images/subscribe-bg.jpg" class="img-responsive sub" alt="subscribe-bg" title="subscribe-bg" />
-		<div class="newsinner">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4 col-xs-12">
-						<div class="product-thumb">
-							<div class="image">
-								<a href="#"><img src="images/foot-banner1.png" alt="foot-banner1" title="foot-banner1"
-										class="img-responsive" /></a>
-								<div class="hoverbox"></div>
-								<div class="matter">
-									<p class="des"><span class="icon_building_alt"></span> Hotel</p>
-									<button type="button"> Booking Now</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4 col-xs-12">
-						<div class="product-thumb">
-							<div class="image">
-								<a href="#"><img src="images/foot-banner1.png" alt="foot-banner2" title="foot-banner2"
-										class="img-responsive" /></a>
-								<div class="hoverbox"></div>
-								<div class="off">
-									<span>Best Packages</span>
-								</div>
-								<div class="matter">
-									<p class="des1">$1000 <span>Package</span> to <small>Dubai</small></p>
-									<button type="button"> Booking Now</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4 col-xs-12">
-						<div class="product-thumb">
-							<div class="image">
-								<a href="#"><img src="images/foot-banner1.png" alt="foot-banner3" title="foot-banner3"
-										class="img-responsive" /></a>
-								<div class="hoverbox"></div>
-								<div class="matter">
-									<p class="des2"><i class="icon_percent_alt"></i> 25% off<br> to <span>Island</span>
-									</p>
-									<button type="button"> Booking Now</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-xs-12">
-						<form class="subscribe">
-							<div class="form-group">
-								<div class="input-group">
-									<label>Subscribe to our newsletter</label>
-									<input placeholder="Enter your email" name="subscribe_email" value="" type="text">
-									<button class="btn btn-default btn-lg" type="submit">Subscribe Now</button>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- news end here -->
-
-	<!-- footer start here -->
-	<footer>
-		<div class="container">
-			<div class="row padd-b">
-				<div class="col-sm-3 contact">
-					<h3>Contact us</h3>
-					<ul class="list-inline">
-						<li>
-							<div class="inner"><i class="fa fa-home" aria-hidden="true"></i> Address</div>
-							<div class="in"><a href="#"> : 240/8 Ho Chi Minh City</a></div>
-						</li>
-						<li>
-							<div class="inner"><i class="fa fa-phone" aria-hidden="true"></i>Phone No.</div>
-							<div class="in"><a href="#"> : (+91)123457890, (1234)</a></div>
-						</li>
-						<li>
-							<div class="inner"><i class="fa fa-envelope" aria-hidden="true"></i>Email</div>
-							<div class="in"><a href="#"> : DCP@gmail.com</a></div>
-							<br>
-							<div class="inner paddleft">website</div>
-							<div class="in"><a href="#"> : www.DCPBooking.com</a></div>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="powered">
-						<div class="col-sm-6 padd0">
-							<p>© Copyright 2021. <span>DCP Booking </span> by Long Pham <a target="_blank"
-									href="https://www.themultimediadesigner.com/"></a> </p>
-						</div>
-						<div class="col-sm-6 padd0 text-right">
-							<div class="social-icon">
-								<ul class="list-inline">
-									<li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://plus.google.com/" target="_blank"><i class="social_googleplus"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://in.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://photos.google.com/" target="_blank"><i
-												class="social_picassa"></i></a></li>
-									<li><a href="https://www.youtube.com/?gl=IN" target="_blank"><i
-												class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- footer end here -->
 
 	<!-- jquery -->
 	<script src="js/jquery.2.1.1.min.js"></script>
@@ -370,6 +106,8 @@
 	<!--date js-->
 	<script src="js/datetimepicker/moment.js"></script>
 	<script src="js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
+	<script type="text/javascript" src="js/booking/lib/utils.js"></script>
+	<script type="text/javascript" src="js/booking/propertyDetail.js"></script>
 </body>
 
 </html>
