--- a/www/ListPropertyAdded.html
+++ b/www/ListPropertyAdded.html
@@ -27,100 +27,6 @@
 </head>
 
 <body>
-	<!-- top start here -->
-	<div id="top">
-		<div class="container">
-			<div id="top-links" class="nav">
-				<ul class="list-inline pull-left">
-					<li>
-						<a href="#">Welcome to rentalz</a>
-					</li>
-					<li>
-						<form method="post" enctype="multipart/form-data" id="form-language">
-							<div class="btn-group">
-								<button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
-									Language : <span class="name"><span class="hidden-xs">English</span> <i
-											class="fa fa-caret-down"></i></span>
-								</button>
-								<ul class="dropdown-menu">
-									<li><a href="javascript:;">English</a></li>
-								</ul>
-							</div>
-						</form>
-					</li>
-					<li>
-						<form method="post" enctype="multipart/form-data" id="form-currency">
-							<div class="btn-group">
-								<button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
-									Currency : <span class="name"><span class="hidden-xs"> (USD)</span> <i
-											class="fa fa-caret-down"></i></span>
-								</button>
-								<ul class="dropdown-menu">
-									<li><button class="currency-select btn btn-link btn-block" type="button"
-											name="EUR">&#8364; Euro</button></li>
-									<li><button class="currency-select btn btn-link btn-block" type="button"
-											name="GBP">&#163; Pound Sterling</button></li>
-									<li><button class="currency-select btn btn-link btn-block" type="button"
-											name="USD">$ US Dollar</button></li>
-								</ul>
-							</div>
-						</form>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<!-- top end here -->
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4 col-md-4 col-xs-12">
-					<div class="social-icon">
-						<ul class="list-inline">
-							<li>
-								<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
-										aria-hidden="true"></i></a>
-							</li>
-							<li>
-								<a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"
-										aria-hidden="true"></i></a>
-							</li>
-							<li>
-								<a href="https://plus.google.com/" target="_blank"><i class="social_googleplus"
-										aria-hidden="true"></i></a>
-							</li>
-							<li>
-								<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
-										aria-hidden="true"></i></a>
-							</li>
-							<li>
-								<a href="https://in.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"
-										aria-hidden="true"></i></a>
-							</li>
-							<li><a href="https://photos.google.com/" target="_blank"><i class="social_picassa"></i></a>
-							</li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-sm-4 col-md-4 col-xs-12">
-					<div id="logo">
-						<a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo"
-								title="logo" /></a>
-					</div>
-				</div>
-				<div class="col-sm-4 col-md-4 col-xs-12">
-					<div class="button-login pull-right">
-						<button type="button" class="btn btn-default btn-lg"
-							onclick="location.href='tour-booking-form.html'">Booking Now</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<!-- header start here-->
-	<!-- header end here -->
-
 	<!-- menu start here -->
 	<div id="menu">
 		<div class="container">
@@ -138,7 +44,7 @@
 								<li class="dropdown"><a href="#" class="dropdown-toggle"
 										data-toggle="dropdown">Manage</a>
 									<ul class="dropdown-menu">
-										<li><a href="AddProperty.html"><i class="fa fa-angle-right"
+										<li><a href="index.html"><i class="fa fa-angle-right"
 													aria-hidden="true"></i>AddPropertyPage</a></li>
 										<li><a href="Search.html"><i class="fa fa-angle-right"
 													aria-hidden="true"></i>SearchPage</a></li>
@@ -164,15 +70,14 @@
 	<!-- breadcrumb end here -->
 
 	<!-- main container start here -->
-
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-3">
 				<div class="left-box">
 					<h6>List Details Property</h6>
 					<div class="last1">
-						<ul class="list-unstyled">
-							<li>
+						<ul class="list-unstyled listing-property">
+							<!-- <li>
 								<div class="product-thumb">
 									<div class="image">
 										<a href="DetailsProperty.html"> <img src="images/tour/img1.jpg"
@@ -193,169 +98,14 @@
 										<p>HONAI - VIETNAM</p>
 									</div>
 								</div>
-							</li>
-							<li>
-								<div class="product-thumb">
-								
-										<div class="image">
-											<img src="images/tour/img1.jpg" class="img-responsive" alt="img1"
-												title="img1" />
-											<div class="hoverbox">
-												<div class="icon_plus" aria-hidden="true"></div>
-											</div>
-										</div>
-							
-									<div class="caption">
-										<a href="DetailsProperty.html"><h4>Hotel X </h4></a>
-										<div class="rate">
-											<i class="fa fa-star" aria-hidden="true"></i>
-											<i class="fa fa-star" aria-hidden="true"></i>
-											<i class="fa fa-star" aria-hidden="true"></i>
-											<i class="fa fa-star" aria-hidden="true"></i>
-											<i class="fa fa-star-half-o" aria-hidden="true"></i>
-										</div>
-										<p>HONAI - VIETNAM</p>
-									</div>
-								</div>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 				</div>
-
 			</div>
-
 		</div>
 	</div>
-
 	<!-- main container end here -->
-
-	<!-- news start here -->
-	<div class="news">
-		<img src="images/subscribe-bg.jpg" class="img-responsive sub" alt="subscribe-bg" title="subscribe-bg" />
-		<div class="newsinner">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4 col-xs-12">
-						<div class="product-thumb">
-							<div class="image">
-								<a href="#"><img src="images/foot-banner1.png" alt="foot-banner1" title="foot-banner1"
-										class="img-responsive" /></a>
-								<div class="hoverbox"></div>
-								<div class="matter">
-									<p class="des"><span class="icon_building_alt"></span> Hotel</p>
-									<button type="button"> Booking Now</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4 col-xs-12">
-						<div class="product-thumb">
-							<div class="image">
-								<a href="#"><img src="images/foot-banner1.png" alt="foot-banner2" title="foot-banner2"
-										class="img-responsive" /></a>
-								<div class="hoverbox"></div>
-								<div class="off">
-									<span>Best Packages</span>
-								</div>
-								<div class="matter">
-									<p class="des1">$1000 <span>Package</span> to <small>Dubai</small></p>
-									<button type="button"> Booking Now</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4 col-xs-12">
-						<div class="product-thumb">
-							<div class="image">
-								<a href="#"><img src="images/foot-banner1.png" alt="foot-banner3" title="foot-banner3"
-										class="img-responsive" /></a>
-								<div class="hoverbox"></div>
-								<div class="matter">
-									<p class="des2"><i class="icon_percent_alt"></i> 25% off<br> to <span>Island</span>
-									</p>
-									<button type="button"> Booking Now</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-xs-12">
-						<form class="subscribe">
-							<div class="form-group">
-								<div class="input-group">
-									<label>Subscribe to our newsletter</label>
-									<input placeholder="Enter your email" name="subscribe_email" value="" type="text">
-									<button class="btn btn-default btn-lg" type="submit">Subscribe Now</button>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- news end here -->
-
-	<!-- footer start here -->
-	<footer>
-		<div class="container">
-			<div class="row padd-b">
-				<div class="col-sm-3 contact">
-					<h3>Contact us</h3>
-					<ul class="list-inline">
-						<li>
-							<div class="inner"><i class="fa fa-home" aria-hidden="true"></i> Address</div>
-							<div class="in"><a href="#"> : 240/8 Ho Chi Minh City</a></div>
-						</li>
-						<li>
-							<div class="inner"><i class="fa fa-phone" aria-hidden="true"></i>Phone No.</div>
-							<div class="in"><a href="#"> : (+91)123457890, (1234)</a></div>
-						</li>
-						<li>
-							<div class="inner"><i class="fa fa-envelope" aria-hidden="true"></i>Email</div>
-							<div class="in"><a href="#"> : DCP@gmail.com</a></div>
-							<br>
-							<div class="inner paddleft">website</div>
-							<div class="in"><a href="#"> : www.DCPBooking.com</a></div>
-						</li>
-					</ul>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="powered">
-						<div class="col-sm-6 padd0">
-							<p>© Copyright 2021. <span>DCP Booking </span> by Long Pham <a target="_blank"
-									href="https://www.themultimediadesigner.com/"></a> </p>
-						</div>
-						<div class="col-sm-6 padd0 text-right">
-							<div class="social-icon">
-								<ul class="list-inline">
-									<li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://plus.google.com/" target="_blank"><i class="social_googleplus"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://in.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"
-												aria-hidden="true"></i></a></li>
-									<li><a href="https://photos.google.com/" target="_blank"><i
-												class="social_picassa"></i></a></li>
-									<li><a href="https://www.youtube.com/?gl=IN" target="_blank"><i
-												class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- footer end here -->
 
 	<!-- jquery -->
 	<script src="js/jquery.2.1.1.min.js"></script>
@@ -372,6 +122,8 @@
 	<!--date js-->
 	<script src="js/datetimepicker/moment.js"></script>
 	<script src="js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
+	<script type="text/javascript" src="js/booking/lib/utils.js"></script>
+	<script type="text/javascript" src="js/booking/listingProperty.js"></script>
 </body>
 
 </html>
