--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,49 @@
 </head>
 
 <body id="page-top" class="index">
+    <!-- <div class="col-sm-4 col-md-4 col-xs-12">
+        <div id="logo">
+            <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo" title="logo" /></a>
+        </div>
+    </div> -->
+    <!-- menu start here -->
+    <div id="menu">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-xs-12">
+                    <nav class="navbar">
+                        <div class="navbar-header">
+                            <span class="menutext visible-xs">Welcome to RentalZ</span>
+                            <!-- <div class="col-sm-4 col-md-4 col-xs-12">
+                                <div id="logo">
+                                    <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo" title="logo" /></a>
+                                </div>
+                            </div> -->
+                            <button data-target=".navbar-ex1-collapse" data-toggle="collapse"
+                                class="btn btn-navbar navbar-toggle" type="button"><i class="fa fa-bars"
+                                    aria-hidden="true"></i></button>
+                        </div>
+                        <div class="collapse navbar-collapse navbar-ex1-collapse padd0">
+                            <ul class="nav navbar-nav">
+                                <li class="dropdown"><a href="#" class="dropdown-toggle"
+                                        data-toggle="dropdown">Manage</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="index.html"><i class="fa fa-angle-right"
+                                                    aria-hidden="true"></i>AddPropertyPage</a></li>
+                                        <li><a href="Search.html"><i class="fa fa-angle-right"
+                                                    aria-hidden="true"></i>SearchPage</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="ListPropertyAdded.html">List Property</a></li>
+
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- menu end here -->
     <div class="slice">
         <!-- slide-detail start here -->
         <div class="slide-detail">
@@ -125,7 +168,6 @@
 <!--date js-->
 <script src="js/datetimepicker/moment.js"></script>
 <script src="js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
-
-<script type="text/javascript" src="js/booking.js"></script>
-
+<script type="text/javascript" src="js/booking/lib/utils.js"></script>
+<script type="text/javascript" src="js/booking/booking.js"></script>
 </html>
