--- a/www/index.html
+++ b/www/index.html
@@ -89,51 +89,51 @@
                 <form class="form-horizontal">
                     <div class="form-group">
                         <div class="col-sm-2 wid">
-                            <h2>Vui lòng nhập thông tin các trường bắt buộc<span class="required-field"> (*)</span></h2>
-                            <label>Tên thuộc tính<span class="required-field"> (*)</span></label>
+                            <!-- <h2>Vui lòng nhập thông tin các trường bắt buộc<span class="required-field"> (*)</span></h2> -->
+                            <label>Attribute name<span class="required-field"> (*)</span></label>
                             <input id="name" name="s" class="form-control" value="" placeholder="Nhập tên thuộc tính.."
                                 type="text">
                         </div>
                         <div class="col-sm-2 wid2">
-                            <label>Địa chỉ tài sản<span class="required-field"> (*)</span></label>
+                            <label>Address<span class="required-field"> (*)</span></label>
                             <input id="address" name="s" class="form-control" value=""
                                 placeholder="Nhập địa chỉ khách sạn, phòng cho thuê của bạn .." type="text">
                         </div>
                         <div class="col-sm-2 wid2">
-                            <label>Loại bất động sản<span class="required-field"> (*)</span></label>
+                            <label>Type of real estate<span class="required-field"> (*)</span></label>
                             <select id="type" class="selectpicker form-control" name="location" required>
-                                <option value="1">Căn hộ</option>
-                                <option value="2">Nhà ở</option>
-                                <option value="3">Bungalow</option>
+                                <option value="1">Apartment</option>
+                                <option value="2">Motel</option>
+                                <option value="3">Hotel</option>
                             </select>
                         </div>
                         <div class="col-sm-2 wid2">
-                            <label>Phòng ngủ<span class="required-field"> (*)</span></label>
+                            <label>Bedroom<span class="required-field"> (*)</span></label>
                             <select id="room" class="selectpicker form-control" name="location" required>
-                                <option value="1">Studio</option>
-                                <option value="2">Một</option>
-                                <option value="3">Hai</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
                             </select>
                         </div>
                         <div class="col-sm-2 wid date">
-                            <label>Ngày và giờ thêm Thuộc tính<span class="required-field"> (*)</span></label>
+                            <label>CreateDate<span class="required-field"> (*)</span></label>
                             <input id="createdAt" name="s" class="form-control" value="" placeholder="Ngày/Tháng/Năm"
                                 type="text">
                             <button type="button" class="calender"><i class="fa fa-calendar-o"
                                     aria-hidden="true"></i></button>
                         </div>
                         <div class="col-sm-3 wid2">
-                            <label>Giá thuê hàng tháng<span class="required-field"> (*)</span></label>
+                            <label>Monthly rental price<span class="required-field"> (*)</span></label>
                             <input id="pricePerMonth" name="s" class="form-control" value=""
                                 placeholder="Ngân sách tối đa (VND)" type="number">
                         </div>
                         <div class="col-sm-2 wid">
-                            <label>Các loại đồ nội thất</label>
+                            <label>Types of furniture</label>
                             <select id="furniture" class="selectpicker form-control" name="location" required>
-                                <option value="0">Tùy chọn</option>
-                                <option value="1">Nội thất</option>
-                                <option value="2">Chưa hoàn thiện</option>
-                                <option value="3">Đã trang bị một phần</option>
+                                <option value="0">Option</option>
+                                <option value="1">furniture</option>
+                                <option value="2">Incomplete</option>
+                                <option value="3">Partially equipped</option>
                             </select>
                         </div>
                         <div class="col-sm-2 wid2">
@@ -144,7 +144,7 @@
                                 placeholder="Nhập thông tin ghi chú" type="text"> -->
                         </div>
                         <div class="col-sm-3 wid2">
-                            <button id="confirm" class="btn-primary" type="button">xác nhận</button>
+                            <button id="confirm" class="btn-primary" type="button">Add</button>
                         </div>
                     </div>
                     <div id="snackbar">Some text some message..</div>
