Update Translate & Behavior Form Data

--- a/www/index.html
+++ b/www/index.html
@@ -89,15 +89,15 @@
                 <form class="form-horizontal">
                     <div class="form-group">
                         <div class="col-sm-2 wid">
-                            <!-- <h2>Vui lòng nhập thông tin các trường bắt buộc<span class="required-field"> (*)</span></h2> -->
+                            <h2>Please enter the required fields<span class="required-field"> (*)</span></h2>
                             <label>Attribute name<span class="required-field"> (*)</span></label>
-                            <input id="name" name="s" class="form-control" value="" placeholder="Nhập tên thuộc tính.."
+                            <input id="name" name="s" class="form-control" value="" placeholder="Enter the property name.."
                                 type="text">
                         </div>
                         <div class="col-sm-2 wid2">
                             <label>Address<span class="required-field"> (*)</span></label>
                             <input id="address" name="s" class="form-control" value=""
-                                placeholder="Nhập địa chỉ khách sạn, phòng cho thuê của bạn .." type="text">
+                                placeholder="Enter the Address .." type="text">
                         </div>
                         <div class="col-sm-2 wid2">
                             <label>Type of real estate<span class="required-field"> (*)</span></label>
@@ -116,8 +116,8 @@
                             </select>
                         </div>
                         <div class="col-sm-2 wid date">
-                            <label>CreateDate<span class="required-field"> (*)</span></label>
-                            <input id="createdAt" name="s" class="form-control" value="" placeholder="Ngày/Tháng/Năm"
+                            <label>Create Date<span class="required-field"> (*)</span></label>
+                            <input id="createdAt" name="s" class="form-control" value="" placeholder="Enter Create date"
                                 type="text">
                             <button type="button" class="calender"><i class="fa fa-calendar-o"
                                     aria-hidden="true"></i></button>
@@ -125,20 +125,20 @@
                         <div class="col-sm-3 wid2">
                             <label>Monthly rental price<span class="required-field"> (*)</span></label>
                             <input id="pricePerMonth" name="s" class="form-control" value=""
-                                placeholder="Ngân sách tối đa (VND)" type="number">
+                                placeholder="Enter Monthly rental price (VND)" type="number">
                         </div>
                         <div class="col-sm-2 wid">
                             <label>Types of furniture</label>
                             <select id="furniture" class="selectpicker form-control" name="location" required>
                                 <option value="0">Option</option>
-                                <option value="1">furniture</option>
+                                <option value="1">Furniture</option>
                                 <option value="2">Incomplete</option>
                                 <option value="3">Partially equipped</option>
                             </select>
                         </div>
                         <div class="col-sm-2 wid2">
-                            <label>Ghi chú</label>
-                            <textarea id="noted" class="form-control" placeholder="Nhập thông tin ghi chú" name="s"
+                            <label>Noted</label>
+                            <textarea id="noted" class="form-control" placeholder="Enter Noted" name="s"
                                 rows="4" cols="50"></textarea>
                             <!-- <input id="noted" name="s" class="form-control" value=""
                                 placeholder="Nhập thông tin ghi chú" type="text"> -->
