--- a/www/Search.html
+++ b/www/Search.html
@@ -73,37 +73,39 @@
                 <form class="form-horizontal">
                     <div class="form-group">
                         <div class="col-sm-2 wid">
-                            <h2>Please enter the contract information<span class="required-field"> (*)</span></h2>
-                            <label>Attribute name<span class="required-field"> (*)</span></label>
+                            <h2>Please enter the search form</h2>
+                            <label>Attribute name</label>
                             <input id="name" name="s" class="form-control" value="" placeholder="Enter the property name.."
                                 type="text">
                         </div>
                         <div class="col-sm-2 wid2">
-                            <label>Type of real estate<span class="required-field"> (*)</span></label>
+                            <label>Type of real estate</label>
                             <select id="type" class="selectpicker form-control" name="location" required>
+                                <option value=""></option>
                                 <option value="1">Apartment</option>
                                 <option value="2">Motel</option>
                                 <option value="3">Hotel</option>
                             </select>
                         </div>
                         <div class="col-sm-2 wid2" style="padding-top: 10px;">
-                            <label>Bedroom<span class="required-field"> (*)</span></label>
+                            <label>Bedroom</label>
                             <select id="room" class="selectpicker form-control" name="location" required>
+                                <option value=""></option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
                             </select>
                         </div>
                         <div class="col-sm-3 wid2" style="padding-top: 10px;">
-                            <label>Monthly rental price<span class="required-field"> (*)</span></label>
+                            <label>Monthly rental price</label>
                             <input id="pricePerMonth" name="s" class="form-control" value=""
                                 placeholder="Maximum budget (VND)" type="number">
                         </div>
                         <div class="col-sm-2 wid">
                             <label>Types of furniture</label>
                             <select id="furniture" class="selectpicker form-control" name="location" required>
-                                <option value="0">Option</option>
-                                <option value="1">furniture</option>
+                                <option value=""></option>
+                                <option value="1">Furniture</option>
                                 <option value="2">Incomplete</option>
                                 <option value="3">Partially equipped</option>
                             </select>
@@ -132,6 +134,7 @@
     <!--date js-->
     <script src="js/datetimepicker/moment.js"></script>
     <script src="js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="js/booking/lib/utils.js"></script>
     <script type="text/javascript" src="js/booking/search.js"></script>
 </body>
 
