--- a/www/SearchDetail.html
+++ b/www/SearchDetail.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="places">
-                    <h1>Kết quả tìm kiếm</h1>
+                    <h1>Search Result</h1>
                     <hr>
                 </div>
                 <div class="tab-content">
