--- a/www/EditProperty.html
+++ b/www/EditProperty.html
@@ -19,9 +19,7 @@
     <!-- Bootstrap stylesheet -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- font -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900%7CPT+Serif:400,400i,700,700i"
-        rel="stylesheet">
+
     <link href="css/ele-style.css" rel="stylesheet" type="text/css" />
     <!-- stylesheet -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -67,9 +65,9 @@
                                         data-toggle="dropdown">Manage</a>
                                     <ul class="dropdown-menu">
                                         <li><a href="index.html"><i class="fa fa-angle-right"
-                                                    aria-hidden="true"></i>AddPropertyPage</a></li>
+                                                    aria-hidden="true"></i><b>AddPropertyPage</b></a></li>
                                         <li><a href="Search.html"><i class="fa fa-angle-right"
-                                                    aria-hidden="true"></i>SearchPage</a></li>
+                                                    aria-hidden="true"></i><b>SearchPage</b></a></li>
                                     </ul>
                                 </li>
                                 <li><a href="ListPropertyAdded.html">List Property</a></li>
