--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,7 @@
     <!-- Bootstrap stylesheet -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- font -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900%7CPT+Serif:400,400i,700,700i"
-        rel="stylesheet">
+
     <link href="css/ele-style.css" rel="stylesheet" type="text/css" />
     <!-- stylesheet -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -38,7 +36,94 @@
     </script>
 </head>
 
+
 <body id="page-top" class="index">
+
+    <div id="top">
+        <div class="container">
+            <div id="top-links" class="nav">
+                <ul class="list-inline pull-left">
+                    <li>
+                        <a href="#">Welcome to rentalz</a>
+                    </li>
+                    <li>
+                        <form method="post" enctype="multipart/form-data" id="form-language">
+                            <div class="btn-group">
+                                <button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
+                                    Language : <span class="name"><span class="hidden-xs">English</span> <i
+                                            class="fa fa-caret-down"></i></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="javascript:;">English</a></li>
+                                </ul>
+                            </div>
+                        </form>
+                    </li>
+                    <li>
+                        <form method="post" enctype="multipart/form-data" id="form-currency">
+                            <div class="btn-group">
+                                <button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
+                                    Currency : <span class="name"><span class="hidden-xs"> (USD)</span> <i
+                                            class="fa fa-caret-down"></i></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><button class="currency-select btn btn-link btn-block" type="button"
+                                            name="EUR">&#8364; Euro</button></li>
+                                    <li><button class="currency-select btn btn-link btn-block" type="button"
+                                            name="GBP">&#163; Pound Sterling</button></li>
+                                    <li><button class="currency-select btn btn-link btn-block" type="button"
+                                            name="USD">$ US Dollar</button></li>
+                                </ul>
+                            </div>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-md-4 col-xs-12">
+                    <div class="social-icon">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
+                                        aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"
+                                        aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://plus.google.com/" target="_blank"><i class="social_googleplus"
+                                        aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
+                                        aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://in.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"
+                                        aria-hidden="true"></i></a>
+                            </li>
+                            <li><a href="https://photos.google.com/" target="_blank"><i class="social_picassa"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+    
+                <div class="col-sm-4 col-md-4 col-xs-12">
+                    <div id="logo">
+                        <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo"
+                                title="logo" /></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
     <!-- <div class="col-sm-4 col-md-4 col-xs-12">
         <div id="logo">
             <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo" title="logo" /></a>
@@ -51,12 +136,13 @@
                 <div class="col-sm-12 col-md-12 col-xs-12">
                     <nav class="navbar">
                         <div class="navbar-header">
-                            <span class="menutext visible-xs">Welcome to RentalZ</span>
+                            <span class="menutext visible-xs">Home</span>
                             <!-- <div class="col-sm-4 col-md-4 col-xs-12">
                                 <div id="logo">
                                     <a href="index.html"><img class="img-responsive" src="images/logo.png" alt="logo" title="logo" /></a>
                                 </div>
                             </div> -->
+                            
                             <button data-target=".navbar-ex1-collapse" data-toggle="collapse"
                                 class="btn btn-navbar navbar-toggle" type="button"><i class="fa fa-bars"
                                     aria-hidden="true"></i></button>
@@ -65,12 +151,12 @@
                             <ul class="nav navbar-nav">
                                 <li class="dropdown"><a href="#" class="dropdown-toggle"
                                         data-toggle="dropdown">Manage</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="index.html"><i class="fa fa-angle-right"
-                                                    aria-hidden="true"></i>AddPropertyPage</a></li>
-                                        <li><a href="Search.html"><i class="fa fa-angle-right"
-                                                    aria-hidden="true"></i>SearchPage</a></li>
-                                    </ul>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="index.html"><i class="fa fa-angle-right"
+                                                        aria-hidden="true"></i><b>AddPropertyPage</b></a></li>
+                                            <li><a href="Search.html"><i class="fa fa-angle-right"
+                                                        aria-hidden="true"></i><b>SearchPage</b></a></li>
+                                        </ul>
                                 </li>
                                 <li><a href="ListPropertyAdded.html">List Property</a></li>
 
