--- a/www/AddProperty.html
+++ b/www/AddProperty.html
@@ -182,8 +182,8 @@
                             <label>Type of real estate<span class="required-field"> (*)</span></label>
                             <select id="type" class="selectpicker form-control" name="location" required>
                                 <option value="1">Apartment</option>
-                                <option value="2">Motel</option>
-                                <option value="3">Hotel</option>
+                                <option value="2">Hotel</option>
+                                <option value="3">Motel</option>
                             </select>
                         </div>
                         <div class="col-sm-2 wid2" style="padding-top: 10px;">
@@ -209,7 +209,7 @@
                         <div class="col-sm-2 wid">
                             <label>Types of furniture</label>
                             <select id="furniture" class="selectpicker form-control" name="location" required>
-                                <option value="0">Option</option>
+                                <option value="">Option</option>
                                 <option value="1">furniture</option>
                                 <option value="2">Incomplete</option>
                                 <option value="3">Partially equipped</option>
