--- a/www/Search.html
+++ b/www/Search.html
@@ -162,10 +162,10 @@
                         <div class="col-sm-2 wid2">
                             <label>Type of real estate</label>
                             <select id="type" class="selectpicker form-control" name="location" required>
-                                <option value="0"></option>
+                                <option value=""></option>
                                 <option value="1">Apartment</option>
-                                <option value="2">Motel</option>
-                                <option value="3">Hotel</option>
+                                <option value="2">Hotel</option>
+                                <option value="3">Motel</option>
                             </select>
                         </div>
                         <div class="col-sm-2 wid2" style="padding-top: 10px;">
@@ -175,7 +175,6 @@
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
-                                <option value="4">4</option>
                             </select>
                         </div>
                         <div class="col-sm-3 wid2" style="padding-top: 10px;">
@@ -186,7 +185,7 @@
                         <div class="col-sm-2 wid">
                             <label>Types of furniture</label>
                             <select id="furniture" class="selectpicker form-control" name="location" required>
-                                <option value="0"></option>
+                                <option value=""></option>
                                 <option value="1">Furniture</option>
                                 <option value="2">Incomplete</option>
                                 <option value="3">Partially equipped</option>
